--- a/iCare/app/src/main/res/layout/login.xml
+++ b/iCare/app/src/main/res/layout/login.xml
@@ -20,7 +20,7 @@
 
             <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="66dp"
+                android:layout_height="50dp"
                 android:layout_gravity="center_horizontal"
                 android:background="@drawable/corner_edt">
 
@@ -42,14 +42,15 @@
                     android:layout_toRightOf="@+id/img_password"
                     android:background="@null"
                     android:hint="@string/loginName"
-                    android:singleLine="true" />
+                    android:singleLine="true"
+                    android:textSize="14sp" />
             </RelativeLayout>
 
             <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="66dp"
+                android:layout_height="50dp"
                 android:layout_gravity="center_horizontal"
-                android:layout_marginTop="30dp"
+                android:layout_marginTop="10dp"
                 android:background="@drawable/corner_edt">
 
                 <ImageView
@@ -71,7 +72,9 @@
                     android:background="@null"
                     android:hint="@string/password"
                     android:password="true"
-                    android:singleLine="true" />
+                    android:singleLine="true"
+                    android:textIsSelectable="false"
+                    android:textSize="14sp" />
             </RelativeLayout>
 
             <RelativeLayout
@@ -105,14 +108,14 @@
             <Button
                 android:id="@+id/btn_login"
                 android:layout_width="match_parent"
-                android:layout_height="60dp"
+                android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginBottom="60dp"
                 android:layout_marginTop="60dp"
-                android:background="@color/orange"
+                android:background="@color/material_blue_grey_800"
                 android:text="@string/login"
                 android:textColor="@color/white"
-                android:textSize="18sp" />
+                android:textSize="14sp" />
 
         </LinearLayout>
 
