添加底部菜单layout及一些素材图片

--- a/iCare/app/src/main/res/layout/activity_main.xml
+++ b/iCare/app/src/main/res/layout/activity_main.xml
@@ -1,14 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
 
     <FrameLayout
-        android:id="@+id/frameLayout"
+        android:id="@+id/frameContent"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_above="@+id/frameBottom" />
 
-    </FrameLayout>
+    <fragment
+        android:name="com.sundy.icare.views.fragment.TabMenuFragment"
+        android:id="@+id/frameBottom"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/dimens_tab_menu_height"
+        android:layout_alignParentBottom="true" />
 
-</LinearLayout>
+
+</RelativeLayout>
