--- a/iCare/app/src/main/res/layout/login.xml
+++ b/iCare/app/src/main/res/layout/login.xml
@@ -6,12 +6,13 @@
     android:orientation="vertical">
 
     <LinearLayout
+        android:id="@+id/linear_login"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:orientation="vertical"
         android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp">
+        android:layout_marginRight="20dp"
+        android:orientation="vertical">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -112,7 +113,7 @@
                 android:layout_gravity="center_horizontal"
                 android:layout_marginBottom="60dp"
                 android:layout_marginTop="60dp"
-                android:background="@color/material_blue_grey_800"
+                android:background="@color/material_grey_600"
                 android:text="@string/login"
                 android:textColor="@color/white"
                 android:textSize="14sp" />
@@ -120,4 +121,26 @@
         </LinearLayout>
 
     </LinearLayout>
+
+    <TextView
+        android:id="@+id/txt_register"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/txt_first_visit"
+        android:layout_alignParentBottom="false"
+        android:layout_below="@+id/linear_login"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="16dp"
+        android:gravity="bottom"
+        android:text="@string/i_dont_have_account"
+        android:textSize="16sp" />
+
+    <TextView
+        android:id="@+id/txt_first_visit"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="30dp"
+        android:text="@string/my_first_visit" />
 </RelativeLayout>
