--- a/iCare/app/src/main/res/values/dimens.xml
+++ b/iCare/app/src/main/res/values/dimens.xml
@@ -2,4 +2,5 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+    <dimen name="dimens_tab_menu_height">52dp</dimen>
 </resources>
