--- a/iCare/app/src/main/res/layout/login.xml
+++ b/iCare/app/src/main/res/layout/login.xml
@@ -6,13 +6,30 @@
     android:orientation="vertical">
 
     <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:layout_marginBottom="30dp"
+        android:id="@+id/linear_icon"
+        android:layout_marginTop="40dp">
+
+        <ImageView
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:src="@mipmap/ic_launcher" />
+
+    </LinearLayout>
+
+    <LinearLayout
         android:id="@+id/linear_login"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:layout_below="@+id/linear_icon">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -21,7 +38,7 @@
 
             <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="50dp"
+                android:layout_height="@dimen/edt_height"
                 android:layout_gravity="center_horizontal"
                 android:background="@drawable/corner_edt">
 
@@ -49,9 +66,9 @@
 
             <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="50dp"
+                android:layout_height="@dimen/edt_height"
                 android:layout_gravity="center_horizontal"
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="6dp"
                 android:background="@drawable/corner_edt">
 
                 <ImageView
@@ -82,7 +99,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_gravity="center_horizontal"
-                android:layout_marginTop="10dp">
+                android:layout_marginTop="13dp">
 
                 <CheckBox
                     android:id="@+id/cb_remember_pwd"
@@ -109,14 +126,13 @@
             <Button
                 android:id="@+id/btn_login"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="40dp"
                 android:layout_gravity="center_horizontal"
-                android:layout_marginBottom="60dp"
                 android:layout_marginTop="60dp"
-                android:background="@color/material_grey_600"
                 android:text="@string/login"
-                android:textColor="@color/white"
-                android:textSize="14sp" />
+                android:textColor="@android:color/white"
+                android:textSize="14sp"
+                android:background="@drawable/corner_bg_gray_light" />
 
         </LinearLayout>
 
@@ -128,12 +144,12 @@
         android:layout_height="wrap_content"
         android:layout_above="@+id/txt_first_visit"
         android:layout_alignParentBottom="false"
-        android:layout_below="@+id/linear_login"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="16dp"
         android:gravity="bottom"
         android:text="@string/i_dont_have_account"
-        android:textSize="16sp" />
+        android:textSize="16sp"
+        android:textColor="@color/material_grey_850" />
 
     <TextView
         android:id="@+id/txt_first_visit"
