--- a/iCare/app/src/main/res/values/colors.xml
+++ b/iCare/app/src/main/res/values/colors.xml
@@ -7,6 +7,6 @@
     <color name="white">#FFFFFF</color>
     <color name="black">#313132</color>
     <color name="gray">#999999</color>
-
+    <color name="colorTopbar">#a90003</color>
 
 </resources>
