--- a/iCare/app/src/main/res/values/dimens.xml
+++ b/iCare/app/src/main/res/values/dimens.xml
@@ -3,4 +3,6 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="dimens_tab_menu_height">52dp</dimen>
+    <dimen name="topbar_height">50dp</dimen>
+    <dimen name="edt_height">36dp</dimen>
 </resources>
