--- a/iCare/app/src/main/res/layout/tab_menu.xml
+++ b/iCare/app/src/main/res/layout/tab_menu.xml
@@ -2,57 +2,87 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="@dimen/dimens_tab_menu_height"
-    android:orientation="horizontal">
+    android:orientation="vertical">
 
-    <Button
-        android:id="@+id/btn_msg"
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@android:color/holo_red_light" />
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_weight="1"
-        android:background="@null"
-        android:drawableTop="@mipmap/icon_msg_on"
-        android:text="@string/message"
-        android:textColor="@color/black"
-        android:paddingTop="10dp"
-        android:paddingBottom="6dp"
-        android:textSize="12sp" />
+        android:orientation="horizontal">
 
-    <Button
-        android:id="@+id/btn_service"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="1"
-        android:background="@null"
-        android:drawableTop="@mipmap/icon_profile_off"
-        android:paddingBottom="6dp"
-        android:paddingTop="10dp"
-        android:text="@string/service"
-        android:textColor="@color/black"
-        android:textSize="12sp" />
+        <Button
+            android:id="@+id/btnMsg"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:background="@null"
+            android:drawableTop="@mipmap/menu_msg_on"
+            android:paddingBottom="6dp"
+            android:paddingTop="10dp"
+            android:text="@string/message"
+            android:textColor="@color/material_grey_800"
+            android:textSize="12sp" />
 
-    <Button
-        android:id="@+id/btn_remind"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="1"
-        android:background="@null"
-        android:drawableTop="@mipmap/icon_heart_off"
-        android:paddingBottom="6dp"
-        android:paddingTop="10dp"
-        android:text="@string/remind"
-        android:textColor="@color/black"
-        android:textSize="12sp" />
+        <ImageView
+            android:layout_width="1dp"
+            android:layout_height="20dp"
+            android:background="@color/material_grey_300"
+            android:layout_gravity="center_vertical" />
 
-    <Button
-        android:id="@+id/btn_more"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="1"
-        android:background="@null"
-        android:drawableTop="@mipmap/icon_more_off"
-        android:paddingBottom="6dp"
-        android:paddingTop="10dp"
-        android:text="@string/more"
-        android:textColor="@color/black"
-        android:textSize="12sp" />
+        <Button
+            android:id="@+id/btnService"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:background="@null"
+            android:drawableTop="@mipmap/menu_service_off"
+            android:paddingBottom="6dp"
+            android:paddingTop="10dp"
+            android:text="@string/service"
+            android:textColor="@color/material_grey_800"
+            android:textSize="12sp" />
+
+        <ImageView
+            android:layout_width="1dp"
+            android:layout_height="20dp"
+            android:background="@color/material_grey_300"
+            android:layout_gravity="center_vertical" />
+
+        <Button
+            android:id="@+id/btnMarket"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:background="@null"
+            android:drawableTop="@mipmap/menu_market_off"
+            android:paddingBottom="6dp"
+            android:paddingTop="10dp"
+            android:text="@string/market"
+            android:textColor="@color/material_grey_800"
+            android:textSize="12sp" />
+
+        <ImageView
+            android:layout_width="1dp"
+            android:layout_height="20dp"
+            android:background="@color/material_grey_300"
+            android:layout_gravity="center_vertical" />
+
+        <Button
+            android:id="@+id/btnMe"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:background="@null"
+            android:drawableTop="@mipmap/menu_profile_off"
+            android:paddingBottom="6dp"
+            android:paddingTop="10dp"
+            android:text="@string/me"
+            android:textColor="@color/material_grey_800"
+            android:textSize="12sp" />
+    </LinearLayout>
+
 </LinearLayout>
