--- a/iCare/app/src/main/res/values/colors.xml
+++ b/iCare/app/src/main/res/values/colors.xml
@@ -8,5 +8,6 @@
     <color name="black">#313132</color>
     <color name="gray">#999999</color>
     <color name="colorTopbar">#a90003</color>
+    <color name="bar_color">#f6f6f6</color>
 
 </resources>
