--- a/iCare/app/src/main/res/layout/fragment_service.xml
+++ b/iCare/app/src/main/res/layout/fragment_service.xml
@@ -12,12 +12,12 @@
         android:background="@android:color/holo_red_light">
 
         <LinearLayout
-            android:orientation="horizontal"
+            android:id="@+id/relLeft"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:gravity="center"
             android:layout_marginLeft="10dp"
-            android:id="@+id/relLeft">
+            android:gravity="center"
+            android:orientation="horizontal">
 
             <ImageButton
                 android:id="@+id/btnLeft"
@@ -36,11 +36,11 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
+                android:layout_marginLeft="3dp"
+                android:gravity="center"
                 android:text="@string/my_order"
                 android:textColor="@color/white"
-                android:textSize="14sp"
-                android:gravity="center"
-                android:layout_marginLeft="3dp" />
+                android:textSize="14sp" />
         </LinearLayout>
 
         <ImageButton
@@ -52,6 +52,18 @@
             android:background="@null"
             android:gravity="right"
             android:src="@mipmap/icon_add"
+            android:textColor="@color/white"
+            android:textSize="14sp" />
+
+        <ImageButton
+            android:id="@+id/btnSwitch"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_centerVertical="true"
+            android:layout_toLeftOf="@+id/btnRight"
+            android:background="@null"
+            android:gravity="right"
+            android:src="@mipmap/icon_switch_character"
             android:textColor="@color/white"
             android:textSize="14sp" />
     </RelativeLayout>
