--- a/iCare/app/src/main/res/layout/layout_me.xml
+++ b/iCare/app/src/main/res/layout/layout_me.xml
@@ -6,11 +6,25 @@
     android:background="@color/white"
     android:orientation="vertical">
 
-
-    <include
-        layout="@layout/layout_topbar"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="50dp">
+
+        <include
+            layout="@layout/layout_topbar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+        <ImageButton
+            android:id="@+id/btnSwitch"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_centerVertical="true"
+            android:background="@null"
+            android:gravity="right"
+            android:src="@mipmap/icon_switch_character" />
+
+    </RelativeLayout>
 
     <ScrollView
         android:id="@+id/scrollView"
