--- a/iCare/app/src/main/res/layout/layout_topbar.xml
+++ b/iCare/app/src/main/res/layout/layout_topbar.xml
@@ -24,8 +24,6 @@
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
             android:background="@null"
-            android:gravity="right"
-            android:textColor="@color/white"
-            android:textSize="14sp" />
+            android:gravity="right" />
     </RelativeLayout>
 </LinearLayout>
