--- a/iCare/app/src/main/res/layout/activity_main.xml
+++ b/iCare/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,13 @@
         android:id="@+id/frameContent"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@+id/frameMenu" />
+        android:layout_above="@+id/frameMenu"
+        android:visibility="gone" />
+
+    <android.support.v4.view.ViewPager
+        android:id="@+id/pager"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
     <fragment
         android:id="@+id/frameMenu"
