--- a/iCare/app/src/main/res/layout/fragment_market.xml
+++ b/iCare/app/src/main/res/layout/fragment_market.xml
@@ -64,8 +64,8 @@
         <HorizontalScrollView
             android:layout_width="match_parent"
             android:layout_height="100dp"
-            android:scrollbars="none"
-            android:scrollbarSize="1dp">
+            android:scrollbarSize="1dp"
+            android:scrollbars="none">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -220,6 +220,19 @@
             android:layout_width="match_parent"
             android:layout_height="10dp"
             android:background="@color/material_grey_100" />
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <ProgressBar
+                android:id="@+id/progress_bar"
+                style="?android:attr/progressBarStyle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true" />
+
+        </RelativeLayout>
     </LinearLayout>
 
 </LinearLayout>
