--- a/iCare/app/src/main/res/layout/server_latest.xml
+++ b/iCare/app/src/main/res/layout/server_latest.xml
@@ -27,7 +27,7 @@
                 android:layout_centerVertical="true"
                 android:background="@null"
                 android:gravity="right"
-                android:src="@mipmap/icon_packet_orange" />
+                android:src="@mipmap/icon_package" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -38,54 +38,67 @@
         </LinearLayout>
     </RelativeLayout>
 
-    <LinearLayout
-        android:orientation="vertical"
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <RelativeLayout
+        <LinearLayout
+            android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="60dp">
+            android:layout_height="match_parent">
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="60dp">
+
+                <ImageView
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:id="@+id/imgMsg"
+                    android:layout_centerVertical="true"
+                    android:layout_marginLeft="10dp"
+                    android:src="@mipmap/icon_default_img" />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/my_provided_server"
+                    android:id="@+id/txtMsgTitle"
+                    android:layout_toRightOf="@+id/imgMsg"
+                    android:layout_marginLeft="7dp"
+                    android:layout_alignTop="@+id/imgMsg"
+                    android:textColor="@color/material_grey_850"
+                    android:textSize="16sp"
+                    android:singleLine="true" />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="搬运、家政、司机"
+                    android:id="@+id/txtMsg"
+                    android:layout_toRightOf="@+id/imgMsg"
+                    android:layout_alignBottom="@+id/imgMsg"
+                    android:layout_marginLeft="7dp"
+                    android:textIsSelectable="false"
+                    android:textSize="12sp"
+                    android:textColor="@color/material_grey_600"
+                    android:singleLine="true" />
+
+            </RelativeLayout>
 
             <ImageView
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:id="@+id/imgMsg"
-                android:layout_centerVertical="true"
-                android:layout_marginLeft="10dp"
-                android:src="@mipmap/icon_default_img" />
-
-            <TextView
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/my_provided_server"
-                android:id="@+id/txtMsgTitle"
-                android:layout_toRightOf="@+id/imgMsg"
-                android:layout_marginLeft="7dp"
-                android:layout_alignTop="@+id/imgMsg"
-                android:textColor="@color/material_grey_850"
-                android:textSize="16sp"
-                android:singleLine="true" />
+                android:layout_height="10dp"
+                android:background="@color/material_grey_100" />
+        </LinearLayout>
 
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="搬运、家政、司机"
-                android:id="@+id/txtMsg"
-                android:layout_toRightOf="@+id/imgMsg"
-                android:layout_alignBottom="@+id/imgMsg"
-                android:layout_marginLeft="7dp"
-                android:textIsSelectable="false"
-                android:textSize="12sp"
-                android:textColor="@color/material_grey_600"
-                android:singleLine="true" />
+        <ProgressBar
+            android:id="@+id/progress_bar"
+            style="?android:attr/progressBarStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true" />
 
-        </RelativeLayout>
-
-        <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="10dp"
-            android:background="@color/material_grey_100" />
-    </LinearLayout>
+    </RelativeLayout>
 
 </LinearLayout>
