--- a/iCare/app/src/main/res/layout/server_msg.xml
+++ b/iCare/app/src/main/res/layout/server_msg.xml
@@ -10,68 +10,81 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
-    <LinearLayout
-        android:orientation="vertical"
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <RelativeLayout
+        <LinearLayout
+            android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="60dp">
+            android:layout_height="match_parent">
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="60dp">
+
+                <ImageView
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:id="@+id/imgMsg"
+                    android:layout_centerVertical="true"
+                    android:layout_marginLeft="10dp"
+                    android:src="@mipmap/icon_default_img" />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="付款消息"
+                    android:id="@+id/txtMsgTitle"
+                    android:layout_toRightOf="@+id/imgMsg"
+                    android:layout_toLeftOf="@+id/txtMsgTime"
+                    android:layout_marginLeft="7dp"
+                    android:layout_alignTop="@+id/imgMsg"
+                    android:textColor="@color/material_grey_850"
+                    android:textSize="16sp"
+                    android:singleLine="true" />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="许先生对你的服务已经付款，查看详情"
+                    android:id="@+id/txtMsg"
+                    android:layout_toRightOf="@+id/imgMsg"
+                    android:layout_alignBottom="@+id/imgMsg"
+                    android:layout_marginLeft="7dp"
+                    android:textIsSelectable="false"
+                    android:textSize="12sp"
+                    android:textColor="@color/material_grey_600"
+                    android:layout_toLeftOf="@+id/txtMsgTime"
+                    android:singleLine="true" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="12.15 22:36"
+                    android:id="@+id/txtMsgTime"
+                    android:layout_alignParentRight="true"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginRight="10dp"
+                    android:textColor="@color/material_grey_600"
+                    android:textSize="10sp"
+                    android:singleLine="true" />
+            </RelativeLayout>
 
             <ImageView
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:id="@+id/imgMsg"
-                android:layout_centerVertical="true"
-                android:layout_marginLeft="10dp"
-                android:src="@mipmap/icon_default_img" />
-
-            <TextView
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="付款消息"
-                android:id="@+id/txtMsgTitle"
-                android:layout_toRightOf="@+id/imgMsg"
-                android:layout_toLeftOf="@+id/txtMsgTime"
-                android:layout_marginLeft="7dp"
-                android:layout_alignTop="@+id/imgMsg"
-                android:textColor="@color/material_grey_850"
-                android:textSize="16sp"
-                android:singleLine="true" />
+                android:layout_height="10dp"
+                android:background="@color/material_grey_100" />
+        </LinearLayout>
 
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="许先生对你的服务已经付款，查看详情"
-                android:id="@+id/txtMsg"
-                android:layout_toRightOf="@+id/imgMsg"
-                android:layout_alignBottom="@+id/imgMsg"
-                android:layout_marginLeft="7dp"
-                android:textIsSelectable="false"
-                android:textSize="12sp"
-                android:textColor="@color/material_grey_600"
-                android:layout_toLeftOf="@+id/txtMsgTime"
-                android:singleLine="true" />
+        <ProgressBar
+            android:id="@+id/progress_bar"
+            style="?android:attr/progressBarStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true" />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="12.15 22:36"
-                android:id="@+id/txtMsgTime"
-                android:layout_alignParentRight="true"
-                android:layout_marginTop="5dp"
-                android:layout_marginRight="10dp"
-                android:textColor="@color/material_grey_600"
-                android:textSize="10sp"
-                android:singleLine="true" />
-        </RelativeLayout>
-
-        <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="10dp"
-            android:background="@color/material_grey_100" />
-    </LinearLayout>
+    </RelativeLayout>
 
 
 </LinearLayout>
