修改注册界面及功能

--- a/iCare/app/src/main/res/layout/layout_me.xml
+++ b/iCare/app/src/main/res/layout/layout_me.xml
@@ -62,7 +62,7 @@
                         android:gravity="center"
                         android:orientation="vertical">
 
-                        <com.sundy.icare.utils.customs.CircleImageView
+                        <com.sundy.icare.customs.CircleImageView
                             android:id="@+id/imgMe"
                             android:layout_width="60dp"
                             android:layout_height="60dp"
