--- a/iCare/app/src/main/res/layout/register_set_password.xml
+++ b/iCare/app/src/main/res/layout/register_set_password.xml
@@ -6,7 +6,7 @@
     android:orientation="vertical">
 
     <include
-        layout="@layout/layout_topbar_cancel"
+        layout="@layout/layout_topbar_back"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal" />
@@ -26,12 +26,12 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:text="@string/your_username"
+                android:text="@string/set_your_password"
                 android:textColor="@color/material_grey_850"
                 android:textSize="16sp" />
 
             <EditText
-                android:id="@+id/edtUserName"
+                android:id="@+id/edtPassword"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/edt_height"
                 android:layout_marginLeft="30dp"
@@ -39,7 +39,9 @@
                 android:layout_marginTop="20dp"
                 android:background="@drawable/corner_edt"
                 android:gravity="center"
+                android:inputType="textPassword"
                 android:textSize="14sp" />
+
         </LinearLayout>
     </RelativeLayout>
 </LinearLayout>
