--- a/iCare/app/src/main/res/layout/activity_contacts.xml
+++ b/iCare/app/src/main/res/layout/activity_contacts.xml
@@ -6,10 +6,61 @@
     android:orientation="vertical">
 
     <include
-        layout="@layout/layout_topbar_cancel"
+        layout="@layout/layout_topbar_back"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <RelativeLayout
+            android:id="@+id/btnBindFamily"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingBottom="3dp"
+            android:paddingLeft="5dp"
+            android:paddingRight="5dp"
+            android:paddingTop="3dp">
+
+            <ImageView
+                android:id="@+id/imgAddFamily"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_margin="5dp"
+                android:background="@null"
+                android:scaleType="fitCenter"
+                android:src="@mipmap/icon_add_family" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_toRightOf="@+id/imgAddFamily"
+                android:text="@string/bind_family"
+                android:textColor="@color/material_blue_grey_900"
+                android:textSize="16sp" />
+
+            <ImageView
+                android:id="@+id/img_arrow"
+                android:layout_width="15dp"
+                android:layout_height="15dp"
+                android:layout_alignParentBottom="false"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:layout_marginRight="8dp"
+                android:background="@null"
+                android:src="@mipmap/icon_arrow_right" />
+        </RelativeLayout>
+
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="match_parent"
+            android:layout_height="12dp"
+            android:background="@color/material_grey_300" />
+    </LinearLayout>
 
 
 </LinearLayout>
