修改QR scanner 及添加相关permission

--- a/iCare/app/src/main/res/layout/qr_scanner.xml
+++ b/iCare/app/src/main/res/layout/qr_scanner.xml
@@ -14,13 +14,10 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
-    <ImageButton
-        android:layout_width="60dp"
-        android:layout_height="60dp"
-        android:layout_margin="10dp"
-        android:background="@null"
-        android:scaleType="center"
-        android:src="@mipmap/icon_x"
-        android:id="@+id/btn_close"/>
+    <include
+        layout="@layout/layout_topbar_back"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal" />
 
 </RelativeLayout>
