--- a/iCare/app/src/main/res/layout/my_family.xml
+++ b/iCare/app/src/main/res/layout/my_family.xml
@@ -30,10 +30,10 @@
             android:id="@+id/btnRight"
             android:layout_width="50dp"
             android:layout_height="50dp"
+            android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
             android:background="@null"
-            android:src="@mipmap/icon_list"
-            android:layout_alignParentRight="true" />
+            android:src="@mipmap/icon_list" />
     </RelativeLayout>
 
     <RelativeLayout
@@ -58,7 +58,11 @@
             android:numColumns="4"
             android:stretchMode="columnWidth"
             android:verticalSpacing="5dp"
-            android:visibility="gone" />
+            android:visibility="gone"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
+            android:paddingTop="5dp"
+            android:paddingBottom="5dp"/>
 
     </RelativeLayout>
 
