添加绑定邮箱页面

--- a/iCare/app/src/main/res/layout/layout_me.xml
+++ b/iCare/app/src/main/res/layout/layout_me.xml
@@ -139,6 +139,7 @@
                         android:background="@color/material_grey_100" />
 
                     <RelativeLayout
+                        android:id="@+id/btn_Email"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="13dp"
